--- a/trunk/Robot_simulator/Robot_simulator/Robot_simulator.csproj
+++ b/trunk/Robot_simulator/Robot_simulator/Robot_simulator.csproj
@@ -67,6 +67,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Rezkar.resx">
+      <DependentUpon>Rezkar.cs</DependentUpon>
+    </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
@@ -80,7 +83,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Rezkar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Rezkar.Designer.cs">
+      <DependentUpon>Rezkar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Robot.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\ProgramZaRezkanje\ChuckNorris\" />
+    <Folder Include="Content\ProgramZaRezkanje\Ikone\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
