--- a/Robot_simulator/Robot_simulator/Robot_simulator.csproj
+++ b/Robot_simulator/Robot_simulator/Robot_simulator.csproj
@@ -106,6 +106,7 @@
     <None Include="ModelsLWO\MH6_saxis.lwo" />
     <None Include="ModelsLWO\MH6_taxis.lwo" />
     <None Include="ModelsLWO\MH6_uaxis.lwo" />
+    <None Include="ModelsLWO\TOOL1.lwo" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
