--- a/trunk/Robot_simulator/Robot_simulator/Robot_simulator.csproj
+++ b/trunk/Robot_simulator/Robot_simulator/Robot_simulator.csproj
@@ -145,6 +145,7 @@
     <None Include="ModelsLWO\MH6_saxis.lwo" />
     <None Include="ModelsLWO\MH6_taxis.lwo" />
     <None Include="ModelsLWO\MH6_uaxis.lwo" />
+    <None Include="ModelsLWO\Okolica\Barrel_6.lwo" />
     <None Include="ModelsLWO\TOOL1.lwo" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -181,9 +182,6 @@
     <Content Include="Lightwave\ClassLibrary.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Content\ProgramZaRezkanje\ChuckNorris\" />
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
       <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
@@ -199,6 +197,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\ProgramZaRezkanje\ChuckNorris\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
