--- a/trunk/Robot_simulator/Robot_simulator/Robot_simulator.csproj
+++ b/trunk/Robot_simulator/Robot_simulator/Robot_simulator.csproj
@@ -72,6 +72,10 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Grammar\Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="ClassLibrary, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="OpenTK, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL" />
     <Reference Include="OpenTK.Compatibility, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL" />
@@ -182,6 +186,7 @@
     <Content Include="Content\ProgramZaRezkanje\Ikone\premakni.png" />
     <Content Include="Content\ProgramZaRezkanje\Ikone\polkrog.png" />
     <Content Include="DokumentacijaAnimacija.txt" />
+    <Content Include="Grammar\Antlr3.Runtime.dll" />
     <Content Include="Lightwave\ClassLibrary.dll" />
   </ItemGroup>
   <ItemGroup>
