--- a/trunk/Robot_simulator/Robot_simulator/Robot_simulator.csproj
+++ b/trunk/Robot_simulator/Robot_simulator/Robot_simulator.csproj
@@ -154,6 +154,7 @@
     <None Include="ModelsLWO\MH6_uaxis.lwo" />
     <None Include="ModelsLWO\Okolica\Aframe.lwo" />
     <None Include="ModelsLWO\Okolica\Barrel_6.lwo" />
+    <None Include="ModelsLWO\Okolica\floor.lwo" />
     <None Include="ModelsLWO\TOOL1.lwo" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
